# order_matching_engine

./: Cargo.toml  README.md
diagrams/: order_matching_engine_architecture.drawio
grafana_dashboards/: order_book.json
src/: lib.rs  metrics.rs
src/expiration_handler/: expiration_handler.rs  mod.rs
src/expose_trades/: expose_trade_worker.rs  mod.rs
src/market_data/: expose_trade_worker.rs
src/market_data_outbox/: expose_trade_worker.rs  market_data_outbox_worker.rs  mod.rs
src/orderbook/: mod.rs  order_levels.rs  orderbook.rs  orderlevels.rs  types.rs
src/web_server/: endpoints.rs  mod.rs  types.rs
