[package]
name = "matching_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.97"
chrono = "0.4.40"
crossbeam = "0.8.4"
goose = "0.18.0"
lazy_static = "1.5.0"
metrics-exporter-prometheus = "0.16.2"
prometheus = "0.13.4"
rand = "0.9.0"
rlt = "0.2.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["serde", "v4", "fast-rng"] }
warp = "0.3.7"
